Bug 1242343 - p1. ConstructSystem32Path from LoadLibrarySystem32 - r=jimm

Part 1: Refactored LoadLibrarySystem32 to expose the system32-path
construction code, so it can be re-used in the following patch.

MozReview-Commit-ID: J5BcI34VPnN